# pcs_api

./: .gitignore  .gitmodules  README.md  setup.py
android/: build.gradle  gradle.properties  maven_push.gradle  pom-dependencies.xml  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/pcs-api-android/: build.gradle
android/pcs-api-android/src/main/java/net/netheos/pcsapi/: OAuth2AuthorizationActivity.java
android/pcs-api-android/src/main/res/values/: strings.xml
android/pcsapi-android/: build.gradle
android/pcsapi-android/src/main/: AndroidManifest.xml
android/pcsapi-android/src/main/java/net/netheos/pcsapi/: OAuth2AuthorizationActivity.java
android/pcsapi-android/src/main/res/layout/: activity_get_authorization.xml
android/pcsapi-android/src/main/res/values/: strings.xml
cpp/: CMakeLists.txt  CMake_ext_deps.inc  run_cmake_windows.sh  run_cpplint.sh  run_exe_windows.sh
cpp/libpcs_api/: CMakeLists.txt  config.h.in
cpp/libpcs_api/include/pcs_api/: app_info.h  app_info_file_repository.h  app_info_repository.h  byte_sink.h  byte_source.h  c_blob.h  c_download_request.h  c_exceptions.h  c_file.h  c_folder.h  c_folder_content.h  c_path.h  c_quota.h  c_upload_request.h  credentials.h  file_byte_sink.h  file_byte_source.h  i_storage_provider.h  memory_byte_sink.h  memory_byte_source.h  model.h  oauth2_app_info.h  oauth2_bootstrapper.h  oauth2_credentials.h  password_credentials.h  progress_listener.h  retry_strategy.h  stdout_progress_listener.h  storage_builder.h  storage_facade.h  types.h  user_credentials.h  user_credentials_file_repository.h  user_credentials_repository.h
cpp/libpcs_api/include/pcs_api/internal/: c_folder_content_builder.h  c_response.h  dll_defines.h  form_body_builder.h  http_client_pool.h  json_utils.h  logger.h  multipart_streambuf.h  multipart_streamer.h  oauth2.h  oauth2_session_manager.h  oauth2_storage_provider.h  object_pool.h  password_session_manager.h  password_storage_provider.h  progress_byte_sink.h  progress_byte_source.h  request_invoker.h  retry_401_once_response_validator.h  storage_provider.h  uri_utils.h  utilities.h
cpp/libpcs_api/include/pcs_api/internal/providers/: cloudme.h  dropbox.h  googledrive.h  hubic.h  swift_client.h
cpp/libpcs_api/src/auth/: oauth2.cc  oauth2_bootstrapper.cc  oauth2_session_manager.cc  password_session_manager.cc
cpp/libpcs_api/src/bytesio/: file_byte_sink.cc  file_byte_source.cc  memory_byte_sink.cc  memory_byte_source.cc  progress_byte_sink.cc  progress_byte_source.cc  stdout_progress_listener.cc
cpp/libpcs_api/src/credentials/: app_info.cc  app_info_file_repository.cc  credentials.cc  oauth2_app_info.cc  oauth2_credentials.cc  password_credentials.cc  user_credentials.cc  user_credentials_file_repository.cc
cpp/libpcs_api/src/model/: c_blob.cc  c_download_request.cc  c_exceptions.cc  c_file.cc  c_folder.cc  c_folder_content.cc  c_folder_content_builder.cc  c_path.cc  c_quota.cc  c_upload_request.cc  retry_strategy.cc
cpp/libpcs_api/src/providers/: cloudme.cc  dropbox.cc  googledrive.cc  hubic.cc  swift_client.cc
cpp/libpcs_api/src/request/: c_response.cc  form_body_builder.cc  http_client_pool.cc  json_utils.cc  multipart_streambuf.cc  multipart_streamer.cc  object_pool.cc  request_invoker.cc  retry_401_once_response_validator.cc  uri_utils.cc
cpp/libpcs_api/src/storage/: storage_builder.cc  storage_facade.cc  utilities.cc
cpp/libpcs_api/test/: CMakeLists.txt  bad_memory_byte_source.cc  bad_memory_byte_source.h  basic_test.cc  bytesio_test.cc  fixed_buffer_byte_sink.cc  fixed_buffer_byte_sink.h  functional_base_test.cc  functional_base_test.h  misc_test_utils.cc  misc_test_utils.h  models_test.cc  multipart_streambuf_test.cc  multipart_streamer_test.cc  stress_test.cc  swift_test.cc  test_main.cc  utils_test.cc
cpp/sample/: CMakeLists.txt  logging.conf  sample.cc
docs/: advanced.md  build.md  byte_sources_and_sinks.md  getting_started.md  oauth2.md  provider_specifics.md
java/: pom.xml
java/src/main/java/net/netheos/pcsapi/bytesio/: ByteSink.java  ByteSinkStream.java  ByteSource.java  FileByteSink.java  FileByteSinkStream.java  FileByteSource.java  LimitedInputStream.java  MemoryByteSink.java  MemoryByteSinkStream.java  MemoryByteSource.java  ProgressByteSink.java  ProgressByteSinkStream.java  ProgressByteSource.java  ProgressInputStream.java  ProgressListener.java  RangeByteSource.java  StdoutProgressListener.java
java/src/main/java/net/netheos/pcsapi/credentials/: AppInfo.java  AppInfoFileRepository.java  AppInfoRepository.java  (+8 more)
java/src/test/java/net/netheos/pcsapi/: BytesIOTest.java  ModelsTest.java  PcsUtilsTest.java  UriTest.java
java/src/test/resources/: cloudme.jks  simplelogger.properties
python/: MANIFEST.in  readme_pypi.rst  requirements.txt  set_python_env.sh  setup.py
python/pcs_api/: __init__.py  _version.py  bytes_io.py  cexceptions.py  models.py  storage.py  utils.py
python/pcs_api/credentials/: __init__.py  app_info.py  app_info_file_repo.py  user_credentials.py  user_creds_file_repo.py
python/pcs_api/oauth/: oauth2_bootstrap.py  oauth2_params.py  session_managers.py
python/pcs_api/providers/: __init__.py  cloudme.py  dropbox.py  googledrive.py  hubic.py  kanbox.py  onedrive.py  rapidshare.py  swift.py
python/test/: conftest.py  test_bytes_io.py  test_invoke_and_retry.py  test_models.py  test_utils.py
python/test/functional/: miscutils.py  test_basic.py  test_stress.py
python/test/providers/: test_googledrive.py  test_swift.py
repositories/: README
samples/android/: build.gradle
samples/android/gradle/wrapper/: gradle-wrapper.properties
samples/android/sample/: build.gradle  proguard-rules.txt
samples/android/sample/src/main/: AndroidManifest.xml
samples/android/sample/src/main/res/layout/: activity_main.xml  activity_menu.xml  item_file.xml
samples/android/sample/src/main/res/values/: strings.xml
samples/cpp/: redirect
samples/java/: nb-configuration.xml  pom.xml
samples/java/src/main/resources/: simplelogger.properties
samples/python/: get_oauth_tokens.py  quick_start.py
(+69 files in other folders)
